--- a/package.json
+++ b/package.json
@@ -2,16 +2,20 @@
   "name": "t4f",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://mehdi-sol1.github.io/PB",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "axios": "^1.6.2",
     "file-saver": "^2.0.5",
+    "gh-pages": "^6.1.1",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
